# edicrowds-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  edicrowds-backend.service  pyproject.toml  tegola_config.toml
engine/: Dockerfile  pyproject.toml
engine/src/engine/: main.py
nginx/: backend-common.conf
nginx/conf.d/: default.conf
src/engine/: alerting.py  classes.py  config.py  main.py  mock_nowcast.json  routes.py  sensors.json  sensors.py  simple_cache.py
src/scrapers/: edintraveldata.py  essential_edinburgh.py  utils.py
tests/engine/: test_alerting.py  test_main.py  test_sensors.py  test_simple_cache.py
tests/scrapers/: test_edintraveldata.py  test_essential_edinburgh.py
