[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Backend FastAPI package for nowcasts of pedestrian density within Edinburgh"
authors = ["Tristan Goss <tristanjdgoss@gmail.com>"]
readme = "README.md"
packages = [
    { include = "engine", from = "src" },
    { include = "scrapers", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
geopandas = ">=1.0.1,<2.0.0"
uvicorn = ">=0.34.0,<0.35.0"
beautifulsoup4 = "^4.13.3"
opencv-python = "^4.11.0.86"
playwright = "^1.51.0"
lxml = "^5.3.1"
html5lib = "^1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
