[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Backend FastAPI package for nowcasts of pedestrian density within Edinburgh"
authors = ["Tristan Goss <tristanjdgoss@gmail.com>"]
readme = "README.md"
packages = [
    { include = "engine", from = "src" },
    { include = "scrapers", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
geopandas = ">=1.0.1,<2.0.0"
uvicorn = ">=0.34.0,<0.35.0"
beautifulsoup4 = "^4.13.3"
opencv-python = "^4.11.0.86"
playwright = "^1.51.0"
lxml = "^5.3.1"
html5lib = "^1.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "0.11.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C90",      # Cyclomatic complexity
    "D",        # pydocstyle
    "E",        # pycodestyle
    "F",        # pyflakes
    "I",        # Sort imports
    "PLR",      # pylint
]
ignore = [
    "D100",  # no module docstring
    "D101",  # no class docstring
    "D103",  # no function docstring
    "D104",  # no package docstring
    "D105",  # no magic method docstring
    "D107",  # no __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"