[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Backend FastAPI package for nowcasts of pedestrian density within Edinburgh"
authors = ["Tristan Goss <tristanjdgoss@gmail.com>"]
readme = "README.md"
packages = [
    { include = "engine", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
